<resources>
    <string name="app_name">ToGetHer</string>

    <!--- Server 位址 -->
    <string name="base_url">http://114.34.95.168:8080/</string>

    <!--- Gcm -->
    <string name="gcm_defaultSenderId">978444275273</string>

    <!-- method -->
    <string name="api_login">user/login/</string>
    <string name="api_register">user/register/</string>
    <string name="api_create_event">event/create/</string>
    <string name="api_refresh_event">event/query/</string>
    <string name="api_join_event">event/join/</string>
    <string name="api_leave_msg">message/leave-message</string>
    <string name="api_upload_file">file/upload</string>
    <string name="api_download_file">file/download</string>

    <!-- 一般字串 -->
    <string name="action_settings">Settings</string>
    <string name="open_string">open</string>
    <string name="close_string">close</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="edit_profile">編輯名片</string>
    <string name="action_review">最近活動</string>
    <string name="setup">設定</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>

    <string name="register_btn">註冊</string>
    <string name="img_text1">相簿</string>
    <string name="img_text2">相機</string>
    <string name="name_hint">暱稱</string>
    <string name="email_hint">電子郵件</string>
    <string name="pwd_hint">密碼</string>
    <string name="pwd_again_hint">確認密碼</string>
    <string name="clear_btn">清空</string>
    <string-array name="setup">
        <item>"搜尋範圍"></item>
        <item>"關於我們"></item>
        <item>"修改密碼"></item>
    </string-array>

    <string name="leaveMsg">留言</string>
    <string name="join">參加</string>
    <string name="detail">詳情</string>

    <!-- menu 畫面 -->
    <string name="warn_pls_login">請先登入</string>

    <!-- 註冊畫面 -->
    <string name="warn_pls_input_email">請輸入Email</string>
    <string name="warn_pls_input_password">請輸入密碼</string>
    <string name="warn_input_password_length">密碼長度必須大於6</string>
    <string name="warn_pls_input_password_again">請再次確認密碼</string>
    <string name="warn_pls_verify_password">請確認密碼正確</string>
    <string name="warn_pls_input_name">請輸入暱稱</string>

    <string name="msg_register_success">註冊成功，請到登入畫面登入</string>
    <string name="msg_register_failed_with_dupilcate_email">註冊失敗，email已使用</string>

    <!-- 登入畫面 -->
    <string name="hint_go_to_register">還沒加入ToGetHer?申請一個吧!</string>

    <string name="msg_login_success">登入成功，歡迎開始使用</string>
    <string name="msg_login_failed_with_email_not_existed">登入失敗，請確認帳號存在</string>
    <string name="msg_login_failed_with_error_password">登入失敗，請確認密碼正確</string>

    <string name="fb_register_btn">以FB註冊</string>
    <string name="facebook_app_id">1675407852702220</string>

    <!-- 登出對話框 -->
    <string name="msg_logout_confirm">確認登出?</string>
    <string name="msg_logout_desc">登出後下次使用需重新登入</string>

    <!--- 建立事件畫面 -->
    <string name="hint_event_name">活動名稱</string>
    <string name="hint_event_content">活動內容</string>
    <string name="hint_event_people_required">需求人數</string>
    <string name="hint_event_date">活動日期</string>
    <string name="hint_event_time">活動時間</string>
    <string name="btn_create_event">建立活動</string>

    <string name="warn_pls_input_event_name">請輸入活動名稱</string>
    <string name="warn_pls_input_event_content">請簡介活動內容</string>
    <string name="warn_pls_input_attendee_num">請輸入參與人數</string>
    <string name="warn_pls_input_event_date">請輸入活動日期</string>
    <string name="warn_pls_input_event_time">請輸入活動時間</string>

    <string name="msg_create_event_succeed">建立活動成功</string>
    <string name="msg_create_event_failed">建立活動失敗</string>

    <!-- 參加事件畫面 -->
    <string name="hint_i_wanna_say">我想說...</string>
    <string name="warn_pls_input_message">請輸入留言</string>
    <string name="warn_pls_login_to_join">如想參加請先登入</string>

    <string name="msg_leave_msg_succeed">留言成功</string>
    <string name="msg_leave_msg_failed_with_cannot_find_mapping_event">無法找到對應活動</string>
    <string name="msg_leave_msg_failed_with_cannot_find_mapping_user">無法找到對應帳號</string>
    <string name="msg_leave_msg_failed_with_server_exception">留言失敗，伺服器發生問題</string>

    <string name="msg_join_event_succeed">加入活動成功</string>
    <string name="msg_join_event_failed_with_cannot_find_mapping_event">無法找到對應活動</string>
    <string name="msg_join_event_failed_with_cannot_find_mapping_user">無法找到對應帳號</string>
    <string name="msg_join_event_failed_with_join_user_created">無需參加自己建立的活動</string>
    <string name="msg_join_event_failed_with_already_joined">您已經加入過</string>
    <string name="msg_join_event_failed_with_server_exception">加入活動失敗，伺服器發生問題</string>

    <!-- 網路異常或伺服器發生異常 -->
    <string name="error_network_abnormal">網路異常或伺服器發生異常</string>
</resources>
