<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <!-- Event Name Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_event_name_at_dlg_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_event_name" />
    </android.support.design.widget.TextInputLayout>

    <!-- The Content of Event -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_event_content_at_dlg_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_content"/>
    </android.support.design.widget.TextInputLayout>

    <!-- The Number of People Required Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_people_num_at_dlg_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_event_people_required"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Event Content Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_event_time_at_dlg_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_time"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_create_evnet_at_dlg_create_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/btn_create_event"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_shape_selector_orange5"/>

</LinearLayout>