<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/new_register_dialog_1"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:src="@drawable/together"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:visibility="visible" />
    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
        <EditText android:id="@+id/Et_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>
    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/Et_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pwd_hint"/>
    </android.support.design.widget.TextInputLayout>
    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/Et_input_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pwd_again_hint"/>
    </android.support.design.widget.TextInputLayout>
    <!-- NickName Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
        <EditText android:id="@+id/Et_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_hint"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register_at_dlg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:background="@drawable/btn_shape_selector_orange5"

            android:layout_marginRight="130dp"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_clear_at_dlg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_btn"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:background="@drawable/btn_shape_selector_orange5"
             />

    </LinearLayout>



</LinearLayout>