<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="com.exfantasy.together.register.RegisterDialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/Et_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@mipmap/ic_message_outline_100"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/email_hint"
            android:textColorHint="@color/hintColor"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp" />

        <EditText
            android:id="@+id/Et_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/pwd_hint"
            android:drawableLeft="@mipmap/ic_lock_100"
            android:background="@drawable/textfield"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/imageView"
            android:layout_alignRight="@+id/AccountText"
            android:layout_alignEnd="@+id/AccountText"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/Et_input_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/pwd_again_hint"
            android:drawableLeft="@mipmap/ic_lock_100"
            android:background="@drawable/textfield"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/Et_input_password"
            android:layout_alignRight="@+id/AccountText"
            android:layout_alignEnd="@+id/AccountText"
            android:layout_marginLeft="20dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_fb_login"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Et_input_name"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:inputType="text"
                android:ems="10"
                android:hint="@string/name_hint"
                android:background="@drawable/textfield"
                android:drawableLeft="@mipmap/ic_user_100"
                android:textColorHint="@color/hintColor"
                android:layout_below="@+id/editText4"
                android:layout_alignLeft="@+id/editText4"
                android:layout_alignStart="@+id/editText4"
                android:layout_marginTop="30dp"
                android:width="200dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.80"
                android:layout_marginRight="10dp" />

            <RelativeLayout
                android:layout_width="87dp"
                android:layout_height="83dp"
                android:layout_marginLeft="0dp">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_alignBottom="@+id/ImgBtnUploadImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/ic_babes_room_50"
                    app:siBorderWidth="3dp"
                    app:siBorderColor="@color/btnBgColor" />

                <ImageButton
                    android:id="@+id/ImgBtnUploadImg"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.07"
                    android:src="@mipmap/ic_camera_50"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/imageView2"
                    android:layout_alignEnd="@+id/imageView2"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="315dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">

            <Button
                android:id="@+id/Btn_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/register_btn"
                android:layout_marginTop="23dp"
                android:layout_below="@+id/button2"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:layout_alignRight="@+id/button2"
                android:layout_alignEnd="@+id/button2"
                android:background="@color/btnBgColor"
                android:layout_marginRight="70dp" />

            <Button
                android:id="@+id/Btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/clear_btn"
                android:layout_marginTop="23dp"
                android:layout_below="@+id/button2"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:layout_alignRight="@+id/button2"
                android:layout_alignEnd="@+id/button2"
                android:background="@color/btnBgColor" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
