<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_create_user_at_dlg_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_event_content_at_dlg_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_attendee_num_at_dlg_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_event_attendee_at_dlg_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15dp"
        android:padding="5dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText android:id="@+id/et_message_at_dlg_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_i_wanna_say"
            android:textColor="#000000"
            android:textSize="15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_recycler_view_at_dlg_event"
        android:layout_width="fill_parent"
        android:layout_height="130dp"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_leaveMsg_at_dlg_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="24dp"
        android:minHeight="@dimen/flat_button_min_height"
        android:minWidth="@dimen/flat_button_min_width"
        android:text="@string/leaveMsg"
        android:textColor="#FFFFFF"
        fbutton:buttonColor="@color/fbutton_color_sun_flower"
        fbutton:shadowEnabled="true" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_join_at_dlg_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="24dp"
        android:minHeight="@dimen/flat_button_min_height"
        android:minWidth="@dimen/flat_button_min_width"
        android:text="@string/join"
        android:textColor="#FFFFFF"
        fbutton:buttonColor="@color/fbutton_color_orange"
        fbutton:shadowEnabled="true" />

</LinearLayout>