<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainDL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mingle.service.ui.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/contentFL"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <fragment
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp" >

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="96dp"
            android:src="@drawable/mapmarker_marker_inside_pink1"
            android:layout_centerInParent="true"/>

        <com.exfantasy.together.components.floatingActionButton.FloatingActionsMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/orange"
            fab:fab_addButtonColorPressed="@color/orange_pressed"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.exfantasy.together.components.floatingActionButton.FloatingActionButton
                android:id="@+id/fab_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/icon_create_event_orange"/>

            <com.exfantasy.together.components.floatingActionButton.FloatingActionButton
                android:id="@+id/fab_search_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/icon_search_orange"/>

            <com.exfantasy.together.components.floatingActionButton.FloatingActionButton
                android:id="@+id/fab_refresh_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/icon_refresh_orange"/>

        </com.exfantasy.together.components.floatingActionButton.FloatingActionsMenu>

        <!--
        <com.exfantasy.together.components.recyclerview.SnappingRecyclerView
            android:id="@+id/event_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true">
        </com.exfantasy.together.components.recyclerview.SnappingRecyclerView>
        -->

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/menuLL"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/together_menu_background">

            <com.exfantasy.together.components.smartImageView.SmartImageView
                android:id="@+id/menu_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/namei"
                android:background="@drawable/menu_icon_shape" />

            <ImageView
                android:id="@+id/btn_edit_profile_img"
                android:layout_marginTop="20dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/profile_edit" />

            <!--詳細資訊-->

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username_at_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:text="娜美醬"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/tv_user_email_at_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="together@exfantasy.com"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"/>


            </LinearLayout>
m
            <LinearLayout
                android:layout_width="match_parent"
                android:background="#556677"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="這位用戶很懶，什麼資料都沒留下"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--按鈕-->

            <LinearLayout
                android:id="@+id/btn_login_at_menu"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_login_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/login"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_recently_action_at_menu"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_myevents_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/action_review"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_setup_at_menu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_settings_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/setup"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_logout_at_menu"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_logout_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.DrawerLayout>